Fix: Blog ribbon getting clipped by overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,7 @@ h1, h2, h3, h4, h5, h6 {
   #forkongithub a {
     width: 200px;
     position: absolute;
-    top: 32px;
+    top: 60px;
     right: -60px;
     transform: rotate(45deg);
     box-shadow: 0 4px 10px rgba(0,0,0,0.2);
